--- a/pom.xml
+++ b/pom.xml
@@ -18,19 +18,19 @@
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-framework</artifactId>
-           <version>2.12.0</version>
+           <version>5.1.0</version>
        </dependency>
-       <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
+<!--       &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.curator/curator-recipes &ndash;&gt;-->
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-recipes</artifactId>
            <version>4.2.0</version>
        </dependency>
-       <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
+<!--       &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.curator/curator-recipes &ndash;&gt;-->
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-client</artifactId>
-           <version>4.0.0</version>
+           <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
@@ -40,7 +40,7 @@
        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
-           <version>3.4.10</version>
+           <version>3.7.0</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
@@ -50,13 +50,7 @@
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
-           <artifactId>fastjson</artifactId>
            <version>1.2.76</version>
        </dependency>
-
-
    </dependencies>
-
-
-
 </project>
